--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -162,7 +162,7 @@ html{
         position: absolute;
         width: 300px;
         background: var(--white);
-        top: 100.6%;
+        top: 102.6%;
         right: 60px;
       height: auto;
       border: 1px solid #000000;
@@ -725,7 +725,7 @@ html{
     .divIngresoCuenta{
     position: absolute;
     right: 30%;
-    top: 100.6%;
+    top: 102.6%;
     width: 40%;
     height: 100%;
     font-size: 1.6rem;
@@ -843,7 +843,7 @@ html{
         position: absolute;
         right: 30%;
         left: 30%;
-        top: 100.6%;
+        top: 102.6%;
         width: 40%;
         height: 100%;
          font-size: 1.6rem;
@@ -977,7 +977,7 @@ html{
     position: absolute;
     right: 30%;
     left: 30%;
-    top: 100.6%;
+    top: 102.6%;
     width: 40%;
     height: 100%;
     font-size: 1.6rem;
@@ -1064,10 +1064,10 @@ html{
 
     .divMostrarCuenta{
     position: absolute;
-        right: 25%;
-        left: 25%;
-        top: 100.6%;
-        width: 50%;
+        right: 30%;
+        left: 30%;
+        top: 102.6%;
+        width: 40%;
         height: 100%;
         font-size: 1.6rem;
     }
@@ -1087,6 +1087,7 @@ html{
       display: grid;
       grid-template-rows: auto 1fr auto;
       width: 100%;
+      
     }
      .titleMostrarCuenta {
       font-size: var(--lg);
@@ -1152,7 +1153,7 @@ html{
         padding: 6px;
         margin-bottom: 12px;
         }
-    .secondary-buttonMostrarCuenta {
+    .secondary-buttonMostrarCuenta-EditarCuenta {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1163,46 +1164,49 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .login-buttonMostrarCuenta {
+    .login-buttonMostrarCuenta-EditarCuenta {
       margin-top: 14px;
       margin-bottom: 30px;
     }
   
  /* configs para desplegable de cambio de contraseña */
 
-    .divCambiarContrasenia{
+    .divEditarAccount{
         position: absolute;
         right: 30%;
         left: 30%;
-        top: 100.6%;
+        top: 102.6%;
         width: 40%;
         height: 100%;
          font-size: 1.6rem;
 
         
     }
-    .loginCambiarContrasenia {
+    .loginEditarAccount {
       padding: 0 10%;
       width: 100%;
       height: 100vh;
       display: grid;
       place-items: center;
+      border: 1px solid black;
       background-color: var(--white);
       border-radius: 6px;
+      /* position: absolute;
+      top: 45%; */
     }
-    .form-containerCambiarContrasenia {
+    .form-containerEditarAccount {
       position: relative;
       top: -34px;
       display: grid;
       grid-template-rows: auto 1fr auto;
       width: 100%;
     }
-    .titleCambiarContrasenia {
+    .titleEditarAccount {
       font-size: var(--lg);
       margin-bottom: 12px;
       text-align: center;
     }
-    .subtitleCambiarContrasenia {
+    .subtitleEditarAccount {
       color: var(--very-light-pink);
       font-size: var(--md);
       font-weight: 300;
@@ -1210,7 +1214,7 @@ html{
       margin-bottom: 32px;
       text-align: center;
     }
-    .logoCambiarContrasenia {
+    .logoEditarAccount {
       width: 150px;
       margin-bottom: 10px;
       justify-self: center;
@@ -1218,38 +1222,38 @@ html{
       height: 62px;
       /* display: none; */
     }
-    .formCambiarContrasenia {
+    .formEditarAccount {
       display: flex;
       flex-direction: column;
     }
-    .formCambiarContrasenia a {
+    .formEditarAccount a {
       color: var(--hospital-green);
          font-size: 1.6rem;
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
     }
-    .labelNameCambiarContrasenia {
+    .labelNameEditarAccount {
          font-size: 1.6rem;
        font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelEmailCambiarContrasenia {
+    .labelEmailEditarAccount {
          font-size: 1.6rem;
        font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelCambiarContraseniaActual {
+    .labelEditarAccountActual {
          font-size: 1.6rem;
        font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelCambiarContraseniaNueva {
+    .labelEditarAccountNueva {
          font-size: 1.6rem;
        font-weight: bold;
       margin-bottom: 4px;
     }
-    .inputNameCambiarContrasenia {
+    .inputNameEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1258,7 +1262,7 @@ html{
        padding: 6px;
       margin-bottom: 12px;
     }
-    .inputEmailCambiarContrasenia {
+    .inputEmailEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1267,7 +1271,7 @@ html{
        padding: 6px;
       margin-bottom: 12px;
     }
-    .inputCambiarContrasenia {
+    .inputEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1276,7 +1280,7 @@ html{
        padding: 6px;
       margin-bottom: 12px;
     }
-    .primary-buttonCambiarContrasenia {
+    .primary-buttonEditarAccount-Confirmar {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1287,8 +1291,23 @@ html{
        font-weight: bold;
       height: 50px;
     }
-    .login-buttonCambiarContrasenia {
-      margin-top: 14px;
+    .login-buttonEditarAccount-Confirmar {
+      /* margin-top: 14px; */
+      margin-bottom: 30px;
+    }
+      .buttonEditarCambiarContrasenia {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonEditarCambiarContrasenia {
+      /* margin-top: 14px; */
       margin-bottom: 30px;
     }
 
@@ -1298,7 +1317,7 @@ html{
         position: absolute;
         right: 30%;
         left: 30%;
-        top: 100.6%;
+        top: 102.6%;
         width: 40%;
         height: 100%;
          font-size: 1.6rem;
