--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1173,7 +1173,7 @@ html{
         padding: 6px;
         margin-bottom: 12px;
         }
-    .secondary-buttonMostrarCuenta {
+    .secondary-buttonMostrarCuenta-EditarCuenta {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1184,14 +1184,14 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .login-buttonMostrarCuenta {
+    .login-buttonMostrarCuenta-EditarCuenta {
       margin-top: 14px;
       margin-bottom: 30px;
     }
   
-    /* configs para desplegable de cambio de contraseña */
+    /* configs para desplegable de editar cuenta */
 
-    .divCambiarContrasenia{
+    .divEditarAccount{
     position: absolute;
     right: 5%;
     left: 5%;
@@ -1200,7 +1200,7 @@ html{
     height: 100%;
     font-size: 1.6rem;
     }
-    .loginCambiarContrasenia {
+    .loginEditarAccount {
       padding: 0 10%;
       width: 100%;
       height: 100vh;
@@ -1210,19 +1210,19 @@ html{
       border: 1px solid black;
       border-radius: 6px;
     }
-    .form-containerCambiarContrasenia {
+    .form-containerEditarAccount {
       position: relative;
-      top: -34px;
+      top: -12px;
       display: grid;
       grid-template-rows: auto 1fr auto;
       width: 100%;
     }
-     .titleCambiarContrasenia {
+     .titleEditarAccount {
       font-size: var(--lg);
       margin-bottom: 12px;
       text-align: center;
     }
-    .subtitleCambiarContrasenia {
+    .subtitleEditarAccount {
       color: var(--very-light-pink);
       font-size: var(--md);
       font-weight: 300;
@@ -1230,30 +1230,30 @@ html{
       margin-bottom: 32px;
       text-align: center;
     }
-    .logoCambiarContrasenia{
+    .logoEditarAccount{
       width: 150px;
       margin-bottom: 10px;
       justify-self: center;
       object-fit: contain;
       height: 62px;
     }
-    .formCambiarContrasenia {
+    .formEditarAccount {
       display: flex;
       flex-direction: column;
     }
-    .formCambiarContrasenia a {
+    .formEditarAccount a {
       color: var(--hospital-green);
       font-size: var(--sm);
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
     }
-    .labelNameCambiarContrasenia {
+    .labelNameEditarAccount {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .inputNameCambiarContrasenia {
+    .inputNameEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1262,12 +1262,12 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-    .labelEmailCambiarContrasenia{
+    .labelEmailEditarAccount{
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .inputEmailCambiarContrasenia {
+    .inputEmailEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1276,17 +1276,17 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-    .labelCambiarContraseniaActual {
+    .labelEditarAccountActual {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelCambiarContraseniaNueva {
+    .labelEditarAccountNueva {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .inputCambiarContrasenia {
+    .inputEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1295,7 +1295,7 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-    .primary-buttonCambiarContrasenia {
+    .primary-buttonEditarAccount-Confirmar {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1306,10 +1306,27 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .login-buttonCambiarContrasenia {
-      margin-top: 14px;
+    .login-buttonEditarAccount-Confirmar {
+      /* margin-top: 14px; */
       margin-bottom: 30px;
     }
+     .buttonEditarCambiarContrasenia {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonEditarCambiarContrasenia {
+      /* margin-top: 14px; */
+      margin-bottom: 30px;
+    }
+
+
 
     /* configs para desplegable Recuperar cuenta */
 
