--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -1202,7 +1202,7 @@ html{
         padding: 6px;
         margin-bottom: 12px;
         }
-    .secondary-buttonMostrarCuenta {
+    .secondary-buttonMostrarCuenta-EditarCuenta {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1213,15 +1213,15 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .login-buttonMostrarCuenta {
+    .login-buttonMostrarCuenta-EditarCuenta {
       margin-top: 14px;
       margin-bottom: 30px;
     }
 
 
-    /* configs para desplegable de cambio de contraseña */
+    /* configs para desplegable de editar cuenta */
 
-    .divCambiarContrasenia{
+    .divEditarAccount{
         position: absolute;
         right: 25%;
         left: 25%;
@@ -1230,7 +1230,7 @@ html{
         height: 100%;
         font-size: 1.6rem;
     }
-    .loginCambiarContrasenia {
+    .loginEditarAccount {
       padding: 0 10%;
       width: 100%;
       height: 100vh;
@@ -1239,20 +1239,22 @@ html{
       background-color: var(--white);
       border: 1px solid #000000;
       border-radius: 6px;
+     /*  position: absolute;
+      top: 45%; */
     }
-    .form-containerCambiarContrasenia {
+    .form-containerEditarAccount {
       position: relative;
       top: -34px;
       display: grid;
       grid-template-rows: auto 1fr auto;
       width: 100%;
     }
-    .titleCambiarContrasenia {
+    .titleEditarAccount {
       font-size: var(--lg);
       margin-bottom: 12px;
       text-align: center;
     }
-    .subtitleCambiarContrasenia {
+    .subtitleEditarAccount {
       color: var(--very-light-pink);
       font-size: var(--md);
       font-weight: 300;
@@ -1260,7 +1262,7 @@ html{
       margin-bottom: 32px;
       text-align: center;
     }
-    .logoCambiarContrasenia {
+    .logoEditarAccount {
       width: 150px;
       margin-bottom: 10px;
       justify-self: center;
@@ -1268,38 +1270,38 @@ html{
       height: 62px;
       /* display: none; */
     }
-    .formCambiarContrasenia {
+    .formEditarAccount {
       display: flex;
       flex-direction: column;
     }
-    .formCambiarContrasenia a {
+    .formEditarAccount a {
       color: var(--hospital-green);
       /* font-size: var(--sm); */
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
     }
-    .labelNameCambiarContrasenia {
+    .labelNameEditarAccount {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelEmailCambiarContrasenia {
+    .labelEmailEditarAccount {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelCambiarContraseniaActual {
+    .labelEditarAccountActual {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-    .labelCambiarContraseniaNueva {
+    .labelEditarAccountNueva {
       /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
-     .inputNameCambiarContrasenia {
+     .inputNameEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1308,7 +1310,7 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-     .inputEmailCambiarContrasenia {
+     .inputEmailEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1317,7 +1319,7 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-     .inputCambiarContrasenia {
+     .inputEditarAccount {
       background-color: var(--text-input-field);
       border: none;
       border-radius: 8px;
@@ -1326,7 +1328,7 @@ html{
       padding: 6px;
       margin-bottom: 12px;
     }
-    .primary-buttonCambiarContrasenia {
+    .primary-buttonEditarAccount-Confirmar {
       background-color: var(--hospital-green);
       border-radius: 8px;
       border: none;
@@ -1337,8 +1339,23 @@ html{
       font-weight: bold;
       height: 50px;
     }
-    .login-buttonCambiarContrasenia {
-      margin-top: 14px;
+    .login-buttonEditarAccount-Confirmar {
+      /* margin-top: 14px; */
+      margin-bottom: 30px;
+    }
+    .buttonEditarCambiarContrasenia {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonEditarCambiarContrasenia {
+      /* margin-top: 14px; */
       margin-bottom: 30px;
     }
 
